feat: venda e cliente bounded context